Background curve alignment fixed

--- a/src/app/Components/home/home/home.component.scss
+++ b/src/app/Components/home/home/home.component.scss
@@ -1,6 +1,6 @@
 .home-bg {
   background: url('../../../../assets/img/page/bg.png') no-repeat;
-  background-position: top;
+  background-position: 120%;
   min-height: calc(783px + 132px);
   background-size: cover;
   padding-top: 160px;
