--- a/src/app/Components/navbar/navbar.component.scss
+++ b/src/app/Components/navbar/navbar.component.scss
@@ -1,3 +1,3 @@
-.logo {
-  padding-left: 100px;
-}
+// .logo {
+//     padding-left: 200px;
+// }
