--- a/src/assets/scss/_nav.scss
+++ b/src/assets/scss/_nav.scss
@@ -1,14 +1,11 @@
 @import '~@angular/material/theming';
-
 @mixin navBarStyle($theme) {
   $config: mat-typography-config();
-
   $primary: map-get($theme, primary);
   $accent: map-get($theme, accent);
   $foreground: map-get($theme, foreground);
   $background: map-get($theme, background);
   $shadows: map-get($theme, shadows);
-
   .moneytor-body {
     .mt-container {
       font-family: 'Avenir', 'Avenir-LT-Std-Light', 'Avenir-LT-Std-Book',
@@ -54,7 +51,6 @@
               }
             }
           }
-
           .logo-container {
             height: 64px;
             display: flex;
@@ -83,6 +79,9 @@
             white-space: nowrap;
             box-shadow: none;
             background: mat-color($background, transparent);
+            .logo {
+              padding-left: 210px;
+            }
             .mt-toolbar-item {
               cursor: pointer;
               color: mat-color($background, white);
